@@ -2,6 +2,17 @@ IN DEVELOPMENT
 
   BUGFIXES:
 
+    * ``bzr remove`` should remove clean subtrees.
+      Now it will remove (without needing ``--force``) subtrees that contain no
+      files with text changes or modified files.
+      With ``--force`` it removes the subtree regardless of text changes or
+      unknown files.
+      Directories with renames in or out (but not changed otherwise)
+      will now be removed without needing ``--force``.
+      Changed or new ignored files will still not be deleted without
+      ``--force``.
+      (Marius Kruger, partial fix for #111665)
+
     * ``bzr init`` should connect to the remote location one time only.  We
       have been connecting several times because we forget to pass around the
       Transport object. This modifies ``BzrDir.create_branch_convenience``,
